@@ -81,6 +81,7 @@ infoData.options = {};
 infoData.platforms = {};
 infoData.size = 0;
 infoData.client_revision = config.client_revision;
+infoData.servers = config.servers || {};
 
 _.each(config.loggedDirs, function(dir) {
 	if(!fs.existsSync(dir) && !fs.existsSync(dir+"-client") && !fs.existsSync("./AsieLauncher/"+dir)) {
